--- a/styles/globals.css
+++ b/styles/globals.css
@@ -32,7 +32,7 @@ html[data-theme="dark"] {
   color: "white";
 }
 .chakra-ui-light {
-  background-color: #f5f6f9;
+  background-color: white;
   color: "black";
 }
 
