adding webkit appearence to ios srollbar

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -92,6 +92,7 @@ Chakra Ui overwrites */
 
 .container ::-webkit-scrollbar {
   display: none;
+  -webkit-appearance: none;
 }
 .container {
   -ms-overflow-style: none; /* IE and Edge */
