--- a/styles/globals.css
+++ b/styles/globals.css
@@ -6,27 +6,20 @@ body {
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
 
-a {
-  color: inherit;
-  text-decoration: none;
-}
-
 * {
   box-sizing: border-box;
 }
 
 html[data-theme="light"] {
-  --background-color: #f5f6f9;
   --text-color: "black";
-  /* --link-color: #543fd7; */
+  --a-color: #1099fa;
 }
 
 html[data-theme="dark"] {
-  --background-color: #081c3b;
   --text-color: "white";
-
-  /* --link-color: #828fff; */
+  --a-color: #4983c6;
 }
+
 .chakra-ui-dark {
   background-color: #081c3b;
   color: "white";
@@ -50,8 +43,12 @@ Chakra Ui overwrites */
 .chakra-tabs__tab {
   padding: 0 !important;
 }
-.css-gkyhes[aria-selected="true"] {
-  color: #4983c7 !important;
+.tab[aria-selected="true"] {
+  color: var(--text-color) !important;
+}
+a {
+  color: var(--a-color);
+  text-decoration: none;
 }
 
 .h-4 {
@@ -65,6 +62,9 @@ Chakra Ui overwrites */
 .price-tip {
   font-weight: 700;
   font-size: 12px;
+}
+.links:hover {
+  text-decoration: unset !important;
 }
 @media screen and (max-width: 479px) {
   .h-4 {
@@ -104,5 +104,5 @@ Chakra Ui overwrites */
 }
 ::-webkit-scrollbar,
 *::-webkit-scrollbar {
-display: none;
+  display: none;
 }
