--- a/styles/globals.css
+++ b/styles/globals.css
@@ -63,6 +63,9 @@ a {
   font-weight: 700;
   font-size: 12px;
 }
+.links {
+  width: 100%;
+}
 .links:hover {
   text-decoration: unset !important;
 }
