--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,6 +4,8 @@ body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  margin-right: auto !important;
+  margin-left: auto !important;
 }
 
 * {
@@ -23,7 +25,6 @@ html[data-theme="dark"] {
 .chakra-ui-dark {
   /* background-color: #081c3b; */
   background-color: #040c19;
-
 }
 .chakra-ui-light {
   background-color: white;
