--- a/styles/globals.css
+++ b/styles/globals.css
@@ -5,10 +5,14 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 
+
 }
 
 * {
   box-sizing: border-box;
+}
+.chakra-container {
+  min-height: calc(100vh - 195px)
 }
 
 html[data-theme="light"] {
